[gd_scene load_steps=2 format=3 uid="uid://dumjsmgotrhgu"]

[ext_resource type="Script" path="res://Scripts/Scenes/testscene.gd" id="1_x1yhv"]

[node name="Testscene" type="Node2D"]
script = ExtResource("1_x1yhv")

[node name="Save" type="Button" parent="."]
offset_left = 4.0
offset_top = 2.0
offset_right = 48.0
offset_bottom = 33.0
scale = Vector2(0.359685, 0.308042)
text = "Save"

[node name="Load" type="Button" parent="."]
offset_left = 24.0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 33.0
scale = Vector2(0.35152, 0.32241)
text = "Load"

[node name="Generate_Equipmet" type="Button" parent="."]
offset_left = 4.0
offset_top = 16.0
offset_right = 279.0
offset_bottom = 47.0
scale = Vector2(0.29685, 0.383798)
text = "Generate equip n add to inventory"

[node name="equip" type="Button" parent="."]
offset_left = 5.0
offset_top = 32.0
offset_right = 110.0
offset_bottom = 63.0
scale = Vector2(0.429055, 0.298868)
text = "mặc trang bị"

[node name="add_stats_to_player" type="Button" parent="."]
offset_left = 7.0
offset_top = 45.0
offset_right = 159.0
offset_bottom = 76.0
scale = Vector2(0.354261, 0.295736)
text = "add stats to player"

[node name="Button" type="Button" parent="."]
offset_left = 5.0
offset_top = 58.0
offset_right = 29.0
offset_bottom = 66.0
scale = Vector2(0.305251, 0.274217)
text = "add char"

[node name="Button2" type="Button" parent="."]
offset_left = 6.0
offset_top = 69.0
offset_right = 159.0
offset_bottom = 100.0
scale = Vector2(0.250857, 0.281178)
text = "add equip to char1"

[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Generate_Equipmet" to="." method="_on_generate_equipmet_pressed"]
[connection signal="pressed" from="equip" to="." method="_on_equip_pressed"]
[connection signal="pressed" from="add_stats_to_player" to="." method="_on_add_stats_to_player_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
